syntax = "proto3";

package core;

import "core/checkbox_message.proto";

option go_package = "tenkhours/proto/pb/core";

message TaskMsg {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string character_id = 4;
  optional string category_id = 5;
  string name = 6;
  int32 priority = 7;
  optional int64 completed_time = 8;
  repeated Checkbox subtasks = 9;
  optional string description = 10;
  optional int64 deadline = 11;
}

message TaskMsgs {
  repeated TaskMsg tasks = 1;
}

message TaskInput {
  optional string id = 1;
  optional string category_id = 2;
  string name = 3;
  int32 priority = 4;
  optional int64 completed_time = 5;
  repeated CheckboxInput subtasks = 6;
  optional string description = 7;
  optional int64 deadline = 8;
}

message TaskInputs {
  repeated TaskInput tasks = 1;
}